tests/syntax_tests/data/parsing/errors/typeDef/nestedRecord.res
type options = {
  extra?: {
    name: result<{first: bool}, {second: bool}>,
  },
}